refactor: AllayBlockType (#31)
* refactor: AllayBlockType

Deprecated AllayVanillaBlockPaletteRegistry and add
AllayBlockPaletteRegistry

* fix some test

* complete

* move package

* remove todo

* add jmh test

* jmh Warmup

* res: upload block_property_types.json

* feat: 使用新的属性文件重写代码生成

* feat: 废弃BlockPropertyTypeRegistry

* some change

* format

* feat: Update block_property_types.json

* feat: 启用新的property命名逻辑

* feat: 完成 & 修复测试

* refactor: Rename BlockStateRegistry.java to BlockStateHashPalette.java and VanillaBlockPaletteRegistry.java to VanillaBlockStatePalette.java

* feat: Enable scheduler tests

* feat: Enable scheduler tests

---------

Co-authored-by: 刀哥 <3523206925@qq.com>